# contributor.info

./: .commitlintrc.json  .commitlintrc.warning.json  .contributor  .env.example  .env.posthog.example  .github-issue-workspace-backfill.md  .gitignore  .lighthouserc.json  .lintstagedrc.json  .npmrc  .prettierignore  .releaserc.json  .socket.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS.md  CLEANUP_DETAILED_FINDINGS.md  CLEANUP_QUICK_REFERENCE.md  CLEANUP_README.md  CONTINUE_AGENT_SETUP.md  CONTRIBUTING.md  ES_MODULE_FIX_SUMMARY.md  HOVER_CARD_FIXES_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INNGEST_DEPLOYMENT_STATUS.md  INNGEST_SWITCH_INSTRUCTIONS.md  INTEGRATION_NOTES.md  MIGRATION_STATUS.md  NETLIFY_PERFORMANCE_AUDIT_PR1509.md  NETLIFY_PERFORMANCE_AUDIT_PR1610.md  NETLIFY_PERFORMANCE_AUDIT_PR1624.md  OPTIMIZATION_SUMMARY.md  PR_1377_FIX_SUMMARY.md  PR_COMMENT_SUMMARY.md  PR_DESCRIPTION.md  PULL2PRESS_WORKFLOW.yml  README.md  REVIEW_IMPROVEMENTS.md  RLS_FIX_DOCUMENTATION.md  (+114 more)
.Jules/: palette.md
.archived/: inngest-prod-functions.mts.disabled
.bolt/: prompt
.claude/: ralph-loop.local.md
.continue/: copywriting.md  performance-audit-pr-1620-detailed.md  performance-audit-pr-1620.md
.githooks/: README.md  pre-push  prevent-no-verify.sh
.github/: copilot-instructions.md  pr-labeler.yml
.husky/: pre-commit
.jules/: bolt.md  palette.md  sentinel.md
.old-configs/: debug-jest-config.cjs  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api.rs  auth.rs  lib.rs  main.rs  settings.rs  supabase.rs
(+3540 files in other folders)
