[package]
name = "contributor-info-desktop"
version = "0.1.0"
description = "contributor.info in your menu bar"
edition = "2021"

[lib]
name = "contributor_info_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
